<?xml version="1.0"?>
<package format="3">
  <name>mcl3d_tda_ros</name>
  <version>0.0.0</version>
  <description>3D Monte Carlo localization for ROS 2.</description>

  <maintainer email="akai@todo.todo">akai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <exec_depend>pcl_ros</exec_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libyaml-cpp-dev</build_depend>
  <build_depend>pkg-config</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>libyaml-cpp-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
